add heading and some text

--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
     </head>
     <body>
         <!-- HTML -->
-    </h>Choose you choice</h>
-        
+    </h>Choose Your Own Adventure!</h>
+        <p> Your alarm woke you up, </p>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <script>
             // JS
