--- a/home.html
+++ b/home.html
@@ -16,7 +16,9 @@
     <body>
         <!-- HTML -->
     </h>Choose Your Own Adventure!</h>
-        <p> Your alarm woke you up, </p>
+        <p> Your alarm woke you up, you choose to go out</p>
+         <p> Your alarm woke you up, you choose to stay on bed</p>
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <script>
             // JS
