--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
     </h>Your alarm goes off and woke you up!</h>
     
         <p> you choose to go out</p>
-         <p>you choose to stay on bed</p>
+       <a herf="https://jianghuiz7368.github.io/sep-cyoa-project/speeding-truck.html">you choose to stay on bed</a>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <script>
