--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <!-- HTML -->
     </h>Your alarm goes off and woke you up!</h>
     
-        <p> you choose to go out</p>
+        <p> you choose to go out</p><a href= "https://jianghuiz7368.github.io/sep-cyoa-project/lazy-ending/back-to-sleep.html"
          <p>you choose to stay on bed</p>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
