--- a/lazy-ending/back-to-sleep.html
+++ b/lazy-ending/back-to-sleep.html
@@ -9,10 +9,10 @@
         <style>
             /* CSS */
          p {
-             color:blue;
+            color:black;
          }
          div{
-             
+             background-color:lightblue;
          }
             
         </style>
