add text and link

--- a/main-story/speeding-truck.html
+++ b/main-story/speeding-truck.html
@@ -17,8 +17,13 @@
         <!-- HTML -->
        <h>Speeding truck</h>
        
-       <p></p>
-       
+       <p>You left your house and saw a speeding truck heading towards a grandma</p>
+       <div>
+       <a href="you-met-god.html"> Save the grandma</a>  
+       </div>
+      <div>
+       <a href="monster-ending/you-monster-ending"> Watch the grandma get hit by the truck</a>
+       </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <script>
             // JS
