--- a/main-story/you-met-god.html
+++ b/main-story/you-met-god.html
@@ -27,7 +27,7 @@
             <a href="../home.html">You chose to return to earth</a>
         </div>
         <div>
-            <a href="../god-gift.html">you chose to be reborn in a new world</a>
+            <a href="god-gift.html">you chose to be reborn in a new world</a>
         </div>
     
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
