fix god-gift.html link and add unkown.html to hell.html

--- a/gods-gift/unknown.html
+++ b/gods-gift/unknown.html
@@ -15,7 +15,12 @@
     </head>
     <body>
         <!-- HTML -->
-        
+        <div>
+            <h>Greedy</h>
+        </div>
+        <div>
+            <a href="../greedy-ending/hell.html">you got sent to hell</a>
+        </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <script>
