--- a/main-story/god-gift.html
+++ b/main-story/god-gift.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div>
-            <h>God Gift</h>\
+            <h>God Gift</h>
             <p></p>
         </div>
         <div>
@@ -25,7 +25,7 @@
             <a href="../god-gift/warrior.html">you chose to be a warrior</a>
         </div>
         <div>
-            <a href="../god-gift/unknow.html">you chose to get anything you desire</a>
+            <a href="../god-gift/unknown.html">you chose to get anything you desire</a>
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
