fix link in speeding-truck and you-monster

--- a/monster-ending/you-monster.html
+++ b/monster-ending/you-monster.html
@@ -19,7 +19,7 @@
         but all of this is a test given to you by god and you failed. God is disapointed and decided to restart your day.</h2>  
         
        <div>
-        <a href="https://jianghuiz7368.github.io/sep-cyoa-project/home.html">Restart</a>
+        <a href="../home.html">Restart</a>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <script>
