fix where to were

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <!-- HTML -->
-    </h>Your alarm goes off and woke you up!</h>
+    </h1>Your alarm goes off and woke you up!</h>
     
 
     <div>
