fix link in back-to-sleep and add link and text in you-died

--- a/lazy-ending/back-to-sleep.html
+++ b/lazy-ending/back-to-sleep.html
@@ -21,7 +21,7 @@
         <title>A drunk driver crash the truck through your house!</title>
         
         <p> The drver was very very drunk and his truck hit your entire building and you were happening a good nap so you didn't survive</p>
-         <a href="back-to-sleep.html/you-die.html">YOU DIED...</a>
+         <a href="you-die.html">YOU DIED...</a>
         </div>
     </head>
     <body>
