--- a/lazy-ending/you-die.html
+++ b/lazy-ending/you-die.html
@@ -15,8 +15,8 @@
     </head>
     <body>
         <!-- HTML -->
-        
-        
+        <h2> You Died!</h2>
+        <a href="../home.html">click here to restart</a>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <script>
             // JS
