fix link proublem and add bit of story in all the gift html

--- a/gods-gift/unknown.html
+++ b/gods-gift/unknown.html
@@ -16,7 +16,8 @@
     <body>
         <!-- HTML -->
         <div>
-            <h>Greedy</h>
+            <h3>Greedy</h3>
+            <p>you are a sinner for choseing greed. You went for more then you can handle.</p>
         </div>
         <div>
             <a href="../greedy-ending/hell.html">you got sent to hell</a>
