--- a/gods-gift/warrior.html
+++ b/gods-gift/warrior.html
@@ -14,6 +14,10 @@
         <title>Title</title>
     </head>
     <body>
+        <div>
+        <h3>Reborn as a warriar</h3>
+        <p>As you chose the gift of a Warriar. As space around you become distorted, God wave goodbye as he sent you on your way</p>
+        </div>
         <!-- HTML -->
         
         
