--- a/main-story/god-gift.html
+++ b/main-story/god-gift.html
@@ -15,17 +15,17 @@
     </head>
     <body>
         <div>
-            <h>God Gift</h>
-            <p></p>
+            <h3>God Gift</h3>
+            <p>As and reward for your selflessness and bravery,he give you two choice for you to pick. Both are gift to help you on your next life</p>
         </div>
         <div>
-            <a href="../god-gift/mage.html">you chose to be a mage</a>
+            <a href="../gods-gift/mage.html">you chose to be a mage</a>
         </div>
         <div>
-            <a href="../god-gift/warrior.html">you chose to be a warrior</a>
+            <a href="../gods-gift/warrior.html">you chose to be a warrior</a>
         </div>
         <div>
-            <a href="../god-gift/unknown.html">you chose to get anything you desire</a>
+            <a href="../gods-gift/unknown.html">you chose to get anything you desire</a>
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
