--- a/lazy-ending/back-to-sleep.html
+++ b/lazy-ending/back-to-sleep.html
@@ -11,7 +11,7 @@
          p {
             color:black;
          }
-         div{
+         body{
              background-color:lightblue;
          }
             
