--- a/gods-gift/mage.html
+++ b/gods-gift/mage.html
@@ -8,7 +8,8 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" />
         <style>
             /* CSS */
-            
+            body {background-color:lightblue;
+            }
         </style>
         
         <title>Title</title>
