--- a/home.html
+++ b/home.html
@@ -19,7 +19,9 @@
     </head>
     <body>
         <!-- HTML -->
-    </h1>Your alarm goes off and woke you up!</h1>
+    <h1> Home </h1>  
+  
+    </h3>Your alarm goes off and woke you up! Today is a beautiful day what do you want to do?</h3>
     
 
     <div>
