--- a/gods-gift/mage.html
+++ b/gods-gift/mage.html
@@ -10,13 +10,25 @@
             /* CSS */
             body {background-color:lightblue;
             }
+            #cat{
+            color:#5C3E2A;
+            text-align:center;
+            margin:20px;
+        }
+        #cake{
+            Text-align:center;
+            
+        }
+        #main{
+            text-align:center;
+        }
         </style>
         
         <title>Title</title>
     </head>
     <body>
         <!-- HTML -->
-        <div>
+        <div id="cat">
             <h3>Reborn as a mage</h3>
              <p> As you chose the gift of a mage. As space around you become distorted, God wave goodbye as he sent you on your way.</p>
         </div>
