add text to hell.html and CSS

--- a/greedy-ending/hell.html
+++ b/greedy-ending/hell.html
@@ -29,8 +29,14 @@
     </head>
     <body>
         <!-- HTML -->
-        
-        
+      <div id="cat">
+        <h2> Hell </h2>
+        <p> Your surrounding turned extremly hot! There is lava all over the place,
+        you saw two demons in front of you and they told you that you must be punished for you sins!</p>
+    </div>
+    <div id="main">
+   <a href="../home.html">Restart</a>
+       </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <script>
             // JS
