add css-html and change text in you-monster

--- a/monster-ending/you-monster.html
+++ b/monster-ending/you-monster.html
@@ -29,9 +29,10 @@
     </head>
     <body>
         <!-- HTML -->
-        <h2>You're a monster! You just watched a grandma get hit by a truck, 
+        <h2>You're a monster!</h2>
+        <p> You just watched a grandma get hit by a truck, 
         but all of this is a test given to you by god and you failed. God is disapointed and decided to restart your day.</h2>  
-        
+        </p>
        <div>
         <a href="../home.html">Restart</a>
         </div>
