add divs and more text in some pages

--- a/css/css.html
+++ b/css/css.html
@@ -1,18 +1,12 @@
-<style>
+<!DOCTYPE html>
+<html>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <style>
             /* CSS */
-            body{
-            background-color:lightblue;
-        }
-        #cat{
-            color:#5C3E2A;
-            text-align:center;
-            margin:20px;
-        }
-        #cake{
-            Text-align:center;
             
-        }
-        #main{
-            text-align:center;
-        }
         </style>
