--- a/lazy-ending/back-to-sleep.html
+++ b/lazy-ending/back-to-sleep.html
@@ -28,8 +28,13 @@
         <div>
         
         <title>A drunk driver crash the truck through your house!</title>
-        
-        <p> The drver was very very drunk and his truck hit your entire building and you were happening a good nap so you didn't survive</p>
+        <div id="cat">
+        <h2> Back To Sleep</h2>
+
+        <p> while you were asleep, a drunk driver crash the 
+        truck through your house!The drver was very very drunk and his truck hit your entire building and you were happening a good nap so you didn't survive</p>
+        </div>
+        <div id="main">
          <a href="you-die.html">YOU DIED...</a>
         </div>
     </head>
