--- a/lazy-ending/you-die.html
+++ b/lazy-ending/you-die.html
@@ -29,8 +29,11 @@
     </head>
     <body>
         <!-- HTML -->
+     <div id="cat">
         <h2> You Died!</h2>
+        <div id="main">
         <a href="../home.html">click here to restart</a>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
         <script>
             // JS
