--- a/monster-ending/you-monster.html
+++ b/monster-ending/you-monster.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="css/css.html" rel="stylesheet" type="text/css" />
         <style>
             /* CSS */
             body{
@@ -29,17 +30,17 @@
     </head>
     <body>
         <!-- HTML -->
-
+ <div id="cat">
         <h2>You're a monster!</h2>
         <p> You just watched a grandma get hit by a truck, 
         but all of this is a test given to you by god and you failed. God is disapointed and decided to restart your day.</h2>  
         </p>
-
+</div>
         
         
 
 
-       <div>
+       <div id="cake">
         <a href="../home.html">Restart</a>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
