fixed link for unknown.html

--- a/gods-gift/unknown.html
+++ b/gods-gift/unknown.html
@@ -32,7 +32,7 @@
             <h3>Greedy</h3>
             <p>you are a sinner for choseing greed. You went for more then you can handle.</p>
         </div>
-        <div id="c">
+        <div id="main">
             <a href="../greedy-ending/hell.html">you got sent to hell</a>
         </div>
 
